# rust-actix-auth-boilerplate

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2020-09-28-172613_create_users/: up.sql
migrations/2020-09-28-191838_user_password/: down.sql  up.sql
migrations/2020-09-29-065859_user_email/: down.sql  up.sql
src/: main.rs  response.rs  schema.rs
src/auth/: middlewares.rs  mod.rs
src/user/: mod.rs  model.rs  service.rs
