[package]
name = "backend"
version = "0.1.0"
authors = ["Parul <paruliansaragi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
diesel = { version = "1.4.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1.8"
futures = "0.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
actix-identity = "0.3"
lazy_static = "1.4.0"
rust-argon2 = "0.8"
rand = "0.7"
derive_more = "0.99.0"
